--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -11,22 +11,48 @@
         android:gravity="center" >
 
         <TextView
-            android:id="@+id/score"
+            android:id="@+id/score_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
-            android:text="Punteggio:"
+            android:text="@string/punteggio"
             android:textStyle="bold"
             android:visibility="visible" />
 
         <TextView
-            android:id="@+id/lives"
+            android:id="@+id/score_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
-            android:text="Vite:"
+            android:text="0"
+            android:textStyle="bold"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/lives_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:text="@string/vite"
+            android:textStyle="bold"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/lives_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:text="3"
             android:textStyle="bold"
             android:visibility="visible" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/user_action_required"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="@string/user_action_required" />
 
 </RelativeLayout>
