--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -18,7 +18,8 @@
             android:layout_height="wrap_content"
             android:textSize="28dp"
             android:text="Classifica"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="15dp"
             android:layout_gravity="left"
             android:textColor="@android:color/white"
             android:textStyle="bold"
@@ -27,6 +28,7 @@
         <ListView xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/list"
             android:layout_marginTop="20dp"
+            android:layout_marginLeft="15dp"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
