--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="28dp"
-            android:text="Classifica"
+            android:text="@string/classifica"
             android:layout_marginTop="15dp"
             android:layout_marginLeft="15dp"
             android:layout_gravity="left"
